--- a/src/main/resources/assets/warpdrive/lang/zh_CN.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_CN.lang
@@ -579,7 +579,7 @@ warpdrive.energy.side.changed_to_output=%1$s侧面更改为能量输出模式！
 warpdrive.energy.side.changed_to_disabled=%1$s侧面更改为禁用模式！
 
 warpdrive.accelerator.guide.low_power.not_enough_storage=能量不足;我们需要%1$d的能量储备维持运转  目前仅剩%2$d
-warpdrive.accelerator.guide.low_power.accelerating=我们的主能量储备耗尽, 粒子正在泄漏,准备承受巨量辐射!
+warpdrive.accelerator.guide.low_power.accelerating=我们的主能量储备耗尽 (%1$d > %2$d EU), 粒子正在泄漏,准备承受巨量辐射!
 warpdrive.accelerator.guide.low_power.no_particles=需要更多能量以启动加速器!
 warpdrive.accelerator.guide.no_chiller=这台加速器没有冷却设备!
 
