--- a/src/main/resources/assets/warpdrive/lang/zh_TW.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_TW.lang
@@ -577,7 +577,7 @@ warpdrive.energy.side.changed_to_output=%1$s 側面變為能量輸出模式!
 warpdrive.energy.side.changed_to_disabled=%1$s 側面變為能量禁用模式!
 
 warpdrive.accelerator.guide.low_power.not_enough_storage=Energy storage is too low; we need at least %1$d to continue operation but can only store %2$d
-warpdrive.accelerator.guide.low_power.accelerating=We're running out of power chief, particles are on the loose, prepare for massive irradiation!
+warpdrive.accelerator.guide.low_power.accelerating=We're running out of power chief (%1$d > %2$d EU), particles are on the loose, prepare for massive irradiation!
 warpdrive.accelerator.guide.low_power.no_particles=We need more power to start the accelerator!
 warpdrive.accelerator.guide.no_chiller=No chiller could be found for this accelerator!
 
