--- a/src/main/resources/assets/warpdrive/lang/nl_nl.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_nl.lang
@@ -14,7 +14,8 @@ death.attack.warpdrive.teleportation.player=%1$s was gedoos door teleportatie va
 death.attack.warpdrive.warm=%1$s is doodgegaan door oververhitting
 death.attack.warpdrive.warm.player=%1$s is gekookt door %2$s
 
-itemGroup.warpdrive=WarpDrive
+itemGroup.warpdrive.hull=WarpDrive (hull)
+itemGroup.warpdrive.main=WarpDrive (main)
 
 item.warpdrive.component.malformed.name=Verkeerd item
 item.warpdrive.component.emerald_crystal.name=Smaragd afgestemd kristal
