--- a/src/main/resources/assets/warpdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_cn.lang
@@ -14,7 +14,8 @@ death.attack.warpdrive.teleportation.player=%2$s传送%1$s时“失误”了
 death.attack.warpdrive.warm=%1$s死于高温
 death.attack.warpdrive.warm.player=%1$s被%2$s煮熟了
 
-itemGroup.warpdrive=曲率驱动
+itemGroup.warpdrive.hull=曲率驱动 (hull)
+itemGroup.warpdrive.main=曲率驱动 (main)
 
 item.warpdrive.component.malformed.name=畸变废品
 item.warpdrive.component.emerald_crystal.name=绿宝石调谐水晶
