--- a/src/main/resources/assets/warpdrive/lang/fr_fr.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_fr.lang
@@ -14,7 +14,8 @@ death.attack.warpdrive.teleportation.player=%1$s a été tué par %2$s durant sa
 death.attack.warpdrive.warm=%1$s est mort de brûlure sévère
 death.attack.warpdrive.warm.player=%1$s a été cuit par %2$s
 
-itemGroup.warpdrive=WarpDrive
+itemGroup.warpdrive.hull=WarpDrive (hull)
+itemGroup.warpdrive.main=WarpDrive (main)
 
 item.warpdrive.component.malformed.name=Item invalide
 item.warpdrive.component.emerald_crystal.name=Cristal d'émeraude accordé
