--- a/src/main/resources/assets/warpdrive/lang/en_us.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_us.lang
@@ -201,6 +201,7 @@ tile.warpdrive.passive.highly_advanced_machine.name=Highly Advanced Machine Bloc
 tile.warpdrive.machines.chunk_loader.name=Chunk Loader
 tile.warpdrive.machines.laser.name=Laser
 tile.warpdrive.machines.laser_medium.name=Laser Medium (Particle Booster)
+tile.warpdrive.machines.security_station.name=Security Station
 
 tile.warpdrive.atomic.accelerator_controller.name=Accelerator Controller
 tile.warpdrive.atomic.accelerator_controller.tooltip=Controls one or more particle accelerators.\nShall be placed next to an electromagnet.
