Refactored jump gates into StarMapRegistryItems (wip)

--- a/src/main/resources/assets/warpdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_cn.lang
@@ -782,7 +782,7 @@ warpdrive.ship.guide.pre_jump_success=Ok
 warpdrive.ship.guide.too_large_side=Ship is too big (max is %1$d per side)
 warpdrive.ship.guide.too_much_mass_for_planet=Ship is too big for a planet (max is %1$d blocks while ship mass is %2$d blocks)
 warpdrive.ship.guide.insufficient_mass_for_hyperspace=Ship is too small (%1$d/%1$d).\nInsufficient ship mass to engage Alcubierre drive.\nIncrease your mass or use a jumpgate to reach or exit hyperspace.
-warpdrive.ship.guide.jumpgate_is_too_far=Ship is not inside a jumpgate. Jump rejected. Nearest jumpgate is %1$s.
+warpdrive.ship.guide.jumpgate_is_too_far=Ship is not inside a jumpgate. Jump rejected.
 warpdrive.ship.guide.jumpgate_partially_entered=Ship is only %.1f%% inside a jumpgate. Sorry, we'll loose too much crew as is, jump rejected.
 warpdrive.ship.guide.jumpgate_not_defined=Destination jumpgate '%1$s' is unknown. Check jumpgate name.
 warpdrive.ship.guide.jumpgate_blocked=Destination gate is blocked by obstacles. Aborting...
