Updated Siren & Subspace capacitor to use more blocks

--- a/src/main/resources/assets/warpdrive/lang/de_de.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_de.lang
@@ -256,23 +256,24 @@ tile.warpdrive.detection.radar.name=Radar
 tile.warpdrive.detection.warp_isolation.name=Warp-Feld Isolations Block
 tile.warpdrive.detection.warp_isolation.formatted_tooltip=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
 
-tile.warpdrive.detection.siren.tooltip=Ausgelöst durch ein Redstone Signal.
-tile.warpdrive.detection.siren0.name=Industrielle Sirene
-tile.warpdrive.detection.siren0.tooltip=Lässt einen industriellen Alarm bis zu 32 m weit ertönen.
-tile.warpdrive.detection.siren4.name=Standard Luftschutzsirene
-tile.warpdrive.detection.siren4.tooltip=Lässt einen Luftschutzalarm bis zu 32 m weit ertönen.
-tile.warpdrive.detection.siren5.name=Weiterentwickelte Luftschutzsirene
-tile.warpdrive.detection.siren5.tooltip=Lässt einen Luftschutzalarm bis zu 64 m weit ertönen.
-tile.warpdrive.detection.siren6.name=Überlegene Luftschutzsirene
-tile.warpdrive.detection.siren6.tooltip=Lässt einen Luftschutzalarm bis zu 128 m weit ertönen.
+tile.warpdrive.detection.siren_industrial.basic.name=Standard Industrielle Sirene
+tile.warpdrive.detection.siren_industrial.advanced.name=Weiterentwickelte Industrielle Sirene
+tile.warpdrive.detection.siren_industrial.superior.name=Überlegene Industrielle Sirene
+tile.warpdrive.detection.siren_industrial.tooltip=Ausgelöst durch ein Redstone Signal.
+tile.warpdrive.detection.siren_industrial.tooltip.usage=Lässt einen Alarm bis zu %1$d m weit ertönen.
+tile.warpdrive.detection.siren_military.basic.name=Standard Luftschutzsirene
+tile.warpdrive.detection.siren_military.advanced.name=Weiterentwickelte Luftschutzsirene
+tile.warpdrive.detection.siren_military.superior.name=Überlegene Luftschutzsirene
+tile.warpdrive.detection.siren_military.tooltip=Ausgelöst durch ein Redstone Signal.
+tile.warpdrive.detection.siren_military.tooltip.usage=Lässt einen Alarm bis zu %1$d m weit ertönen.
 
 tile.warpdrive.energy.enan_reactor_core.name=Enantiomorpher Reaktorkern
 tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorper Reaktor Stabilisierungs Laser
-tile.warpdrive.energy.energy_bank.0.name=Null-Punkt-Modul
-tile.warpdrive.energy.energy_bank.0.tooltip=Kreativ Subraum Kondensator
-tile.warpdrive.energy.energy_bank.1.name=Standard Subraum Kondensator
-tile.warpdrive.energy.energy_bank.2.name=Weiterentwickelter Subraum Kondensator
-tile.warpdrive.energy.energy_bank.3.name=Überlegener Subraum Kondensator
+tile.warpdrive.energy.capacitor.creative.name=Null-Punkt-Modul
+tile.warpdrive.energy.capacitor.creative.tooltip=Kreativ Subraum Kondensator
+tile.warpdrive.energy.capacitor.basic.name=Standard Subraum Kondensator
+tile.warpdrive.energy.capacitor.advanced.name=Weiterentwickelter Subraum Kondensator
+tile.warpdrive.energy.capacitor.superior.name=Überlegener Subraum Kondensator
 tile.warpdrive.energy.ic2_reactor_laser_cooler.name=IC2 Reaktor Laser Cooler
 
 tile.warpdrive.force_field.block1.name=Standard Kraftfeld
