--- a/src/main/resources/assets/warpdrive/lang/fr_fr.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_fr.lang
@@ -254,23 +254,24 @@ tile.warpdrive.detection.radar.name=Radar
 tile.warpdrive.detection.warp_isolation.name=Bloc d'isolation de champ de Warp
 tile.warpdrive.detection.warp_isolation.formatted_tooltip=Placer jusqu'à %5$d m par rapport au coeur de vaisseau\nUtilise %1$d à %3$d blocs d'isolation pour absorber %2$d %% à %4$d %% des ondes radar
 
-tile.warpdrive.detection.siren.tooltip=Déclenchement par redstone
-tile.warpdrive.detection.siren0.name=Sirène industrielle
-tile.warpdrive.detection.siren0.tooltip=Emet une alarme industrielle audible à 32 m.
-tile.warpdrive.detection.siren4.name=Sirène de raid aérien basique
-tile.warpdrive.detection.siren4.tooltip=Sonne l'alerte de raid aérien audible à 32 m.
-tile.warpdrive.detection.siren5.name=Sirène de raid aérien avancée
-tile.warpdrive.detection.siren5.tooltip=Sonne l'alerte de raid aérien audible à 64 m.
-tile.warpdrive.detection.siren6.name=Sirène de raid aérien supérieure
-tile.warpdrive.detection.siren6.tooltip=Sonne l'alerte de raid aérien audible à 128 m.
+tile.warpdrive.detection.siren_industrial.basic.name=Sirène industrielle basique
+tile.warpdrive.detection.siren_industrial.advanced.name=Sirène industrielle avancée
+tile.warpdrive.detection.siren_industrial.superior.name=Sirène industrielle supérieure
+tile.warpdrive.detection.siren_industrial.tooltip=Déclenchement par redstone
+tile.warpdrive.detection.siren_industrial.tooltip.usage=Emet une alarme audible à %1$d m.
+tile.warpdrive.detection.siren_military.basic.name=Sirène de raid aérien basique
+tile.warpdrive.detection.siren_military.advanced.name=Sirène de raid aérien avancée
+tile.warpdrive.detection.siren_military.superior.name=Sirène de raid aérien supérieure
+tile.warpdrive.detection.siren_military.tooltip=Déclenchement par redstone
+tile.warpdrive.detection.siren_military.tooltip.usage=Emet une alarme audible à %1$d m.
 
 tile.warpdrive.energy.enan_reactor_core.name=Noyau de réacteur Enantiomorphic
 tile.warpdrive.energy.enan_reactor_laser.name=Laser de stabilisation pour réacteur Enantiomorphic
-tile.warpdrive.energy.energy_bank.0.name=Extracteur du potentiel de point zéro
-tile.warpdrive.energy.energy_bank.0.tooltip=Condensateur subspatial creatif
-tile.warpdrive.energy.energy_bank.1.name=Condensateur subspatial élémentaire
-tile.warpdrive.energy.energy_bank.2.name=Condensateur subspatial avancé
-tile.warpdrive.energy.energy_bank.3.name=Condensateur subspatial supérieur
+tile.warpdrive.energy.capacitor.creative.name=Extracteur du potentiel de point zéro
+tile.warpdrive.energy.capacitor.creative.tooltip=Condensateur subspatial creatif
+tile.warpdrive.energy.capacitor.basic.name=Condensateur subspatial élémentaire
+tile.warpdrive.energy.capacitor.advanced.name=Condensateur subspatial avancé
+tile.warpdrive.energy.capacitor.superior.name=Condensateur subspatial supérieur
 tile.warpdrive.energy.ic2_reactor_laser_cooler.name=Laser de refroidissement pour réacteur IC2
 
 tile.warpdrive.force_field.block1.name=Bloc de champ de force élémentaire
