--- a/src/main/resources/assets/warpdrive/lang/nl_nl.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_nl.lang
@@ -251,23 +251,24 @@ tile.warpdrive.detection.radar.name=Radar
 tile.warpdrive.detection.warp_isolation.name=Warp-veld isolatieblok
 tile.warpdrive.detection.warp_isolation.formatted_tooltip=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
 
-tile.warpdrive.detection.siren.tooltip=Aangezet door redstone
-tile.warpdrive.detection.siren0.name=Industrieële Sirene
-tile.warpdrive.detection.siren0.tooltip=Je kan deze Sirene vanaf 32 m verderop horen
-tile.warpdrive.detection.siren4.name=Normale Luchtsirene
-tile.warpdrive.detection.siren4.tooltip=Je kan deze Luchtsirene vanaf 32 meter verderop horen.
-tile.warpdrive.detection.siren5.name=Geavanceerde Luchtsirene
-tile.warpdrive.detection.siren5.tooltip=Je kan deze Luchtsirene vanaf 64 meter verderop nog horen.
-tile.warpdrive.detection.siren6.name=Superieure Luchtsirene
-tile.warpdrive.detection.siren6.tooltip=Je kan deze Luchtsirene vanaf 128 m verderop horen.
+tile.warpdrive.detection.siren_industrial.basic.name=Normale Industrieële Sirene
+tile.warpdrive.detection.siren_industrial.advanced.name=Geavanceerde Industrieële Sirene
+tile.warpdrive.detection.siren_industrial.superior.name=Superieure Industrieële Sirene
+tile.warpdrive.detection.siren_industrial.tooltip=Aangezet door redstone
+tile.warpdrive.detection.siren_industrial.tooltip.usage=Je kan deze Sirene vanaf %1$d m verderop horen.
+tile.warpdrive.detection.siren_military.basic.name=Normale Luchtsirene
+tile.warpdrive.detection.siren_military.advanced.name=Geavanceerde Luchtsirene
+tile.warpdrive.detection.siren_military.superior.name=Superieure Luchtsirene
+tile.warpdrive.detection.siren_military.tooltip=Aangezet door redstone
+tile.warpdrive.detection.siren_military.tooltip.usage=Je kan deze Sirene vanaf %1$d m verderop horen.
 
 tile.warpdrive.energy.enan_reactor_core.name=Enantiomorfe Reactor Kern
 tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorfe Stabilizatielaser
-tile.warpdrive.energy.energy_bank.0.name=Nullpunt Module
-tile.warpdrive.energy.energy_bank.0.tooltip=Creative Subruimte Condensator
-tile.warpdrive.energy.energy_bank.1.name=Normale Subruimte Condensator
-tile.warpdrive.energy.energy_bank.2.name=Geavanceerde Subruimte Condensator
-tile.warpdrive.energy.energy_bank.3.name=Superieure Subruimte Condensator
+tile.warpdrive.energy.capacitor.creative.name=Nullpunt Module
+tile.warpdrive.energy.capacitor.creative.tooltip=Creative Subruimte Condensator
+tile.warpdrive.energy.capacitor.basic.name=Normale Subruimte Condensator
+tile.warpdrive.energy.capacitor.advanced.name=Geavanceerde Subruimte Condensator
+tile.warpdrive.energy.capacitor.superior.name=Superieure Subruimte Condensator
 tile.warpdrive.energy.ic2_reactor_laser_cooler.name=IC2 Reactor Laser Cooler
 
 tile.warpdrive.force_field.block1.name=Normale Krachtvelds-blok
