--- a/src/main/resources/assets/warpdrive/lang/zh_cn.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_cn.lang
@@ -251,23 +251,24 @@ tile.warpdrive.detection.radar.name=雷达
 tile.warpdrive.detection.warp_isolation.name=曲率领域隔离方块
 tile.warpdrive.detection.warp_isolation.formatted_tooltip=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
 
-tile.warpdrive.detection.siren.tooltip=红石触发
-tile.warpdrive.detection.siren0.name=工业警报器
-tile.warpdrive.detection.siren0.tooltip=探测半径32米
-tile.warpdrive.detection.siren4.name=基础空袭警报器
-tile.warpdrive.detection.siren4.tooltip=探测半径32米
-tile.warpdrive.detection.siren5.name=高级空袭警报器
-tile.warpdrive.detection.siren5.tooltip=探测半径64米
-tile.warpdrive.detection.siren6.name=卓越空袭警报器
-tile.warpdrive.detection.siren6.tooltip=探测半径128米
+tile.warpdrive.detection.siren_industrial.basic.name=Basic Industrial Siren / 工业警报器
+tile.warpdrive.detection.siren_industrial.advanced.name=Advanced Industrial Siren / 工业警报器
+tile.warpdrive.detection.siren_industrial.superior.name=Superior Industrial Siren / 工业警报器
+tile.warpdrive.detection.siren_industrial.tooltip=红石触发
+tile.warpdrive.detection.siren_industrial.tooltip.usage=探测半径%1$d米
+tile.warpdrive.detection.siren_military.basic.name=基础空袭警报器
+tile.warpdrive.detection.siren_military.advanced.name=高级空袭警报器
+tile.warpdrive.detection.siren_military.superior.name=卓越空袭警报器
+tile.warpdrive.detection.siren_military.tooltip=红石触发
+tile.warpdrive.detection.siren_military.tooltip.usage=探测半径%1$d米
 
 tile.warpdrive.energy.enan_reactor_core.name=镜像体反应堆芯
 tile.warpdrive.energy.enan_reactor_laser.name=镜像体反应堆稳定激光
-tile.warpdrive.energy.energy_bank.0.name=零点模块
-tile.warpdrive.energy.energy_bank.0.tooltip=创造子空间电容
-tile.warpdrive.energy.energy_bank.1.name=基础子空间电容
-tile.warpdrive.energy.energy_bank.2.name=先进子空间电容
-tile.warpdrive.energy.energy_bank.3.name=卓越子空间电容
+tile.warpdrive.energy.capacitor.creative.name=零点模块
+tile.warpdrive.energy.capacitor.creative.tooltip=创造子空间电容
+tile.warpdrive.energy.capacitor.basic.name=基础子空间电容
+tile.warpdrive.energy.capacitor.advanced.name=先进子空间电容
+tile.warpdrive.energy.capacitor.superior.name=卓越子空间电容
 tile.warpdrive.energy.ic2_reactor_laser_cooler.name=IC2 Reactor Laser Cooler
 
 tile.warpdrive.force_field.block1.name=基础力场方块
