--- a/src/main/resources/assets/warpdrive/lang/zh_tw.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_tw.lang
@@ -251,23 +251,24 @@ tile.warpdrive.detection.radar.name=雷達
 tile.warpdrive.detection.warp_isolation.name=躍遷力場隔絕方塊
 tile.warpdrive.detection.warp_isolation.formatted_tooltip=Place up to %5$d m away from a ship core\nUsing %1$d to %3$d isolation blocks will absorb %2$d %% to %4$d %% of radar waves
 
-tile.warpdrive.detection.siren.tooltip=由紅石觸發
-tile.warpdrive.detection.siren0.name=警報器
-tile.warpdrive.detection.siren0.tooltip=距離32格範圍内有警報器發出了警報。
-tile.warpdrive.detection.siren4.name=空襲警報器
-tile.warpdrive.detection.siren4.tooltip=距離32格範圍内有空襲警報器發出了警報。
-tile.warpdrive.detection.siren5.name=進階空襲警報器
-tile.warpdrive.detection.siren5.tooltip=距離64格範圍内有空襲警報器發出了警報。
-tile.warpdrive.detection.siren6.name=高階空襲警報器
-tile.warpdrive.detection.siren6.tooltip=距離128格範圍内有空襲警報器發出了警報。
+tile.warpdrive.detection.siren_industrial.basic.name=Basic Industrial Siren / 警報器
+tile.warpdrive.detection.siren_industrial.advanced.name=Advanced Industrial Siren / 警報器
+tile.warpdrive.detection.siren_industrial.superior.name=Superior Industrial Siren / 警報器
+tile.warpdrive.detection.siren_industrial.tooltip=由紅石觸發
+tile.warpdrive.detection.siren_industrial.tooltip.usage=距離%1$d格範圍内有警報器發出了警報。
+tile.warpdrive.detection.siren_military.basic.name=空襲警報器
+tile.warpdrive.detection.siren_military.advanced.name=進階空襲警報器
+tile.warpdrive.detection.siren_military.superior.name=高階空襲警報器
+tile.warpdrive.detection.siren_military.tooltip=由紅石觸發
+tile.warpdrive.detection.siren_military.tooltip.usage=距離%1$d格範圍内有空襲警報器發出了警報。
 
 tile.warpdrive.energy.enan_reactor_core.name=核反應堆核
 tile.warpdrive.energy.enan_reactor_laser.name=反應堆穩定激光
-tile.warpdrive.energy.energy_bank.0.name=零點模具
-tile.warpdrive.energy.energy_bank.0.tooltip=創造子空間電容
-tile.warpdrive.energy.energy_bank.1.name=基本子空間電容
-tile.warpdrive.energy.energy_bank.2.name=進階子空間電容
-tile.warpdrive.energy.energy_bank.3.name=高級子空間電容器
+tile.warpdrive.energy.capacitor.creative.name=零點模具
+tile.warpdrive.energy.capacitor.creative.tooltip=創造子空間電容
+tile.warpdrive.energy.capacitor.basic.name=基本子空間電容
+tile.warpdrive.energy.capacitor.advanced.name=進階子空間電容
+tile.warpdrive.energy.capacitor.superior.name=高級子空間電容器
 tile.warpdrive.energy.ic2_reactor_laser_cooler.name=IC2 Reactor Laser Cooler
 
 tile.warpdrive.force_field.block1.name=基本力場方塊
